--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
-atom.symlink/.apm
-atom.symlink/.node-gyp
-atom.symlink/.storage
-atom.symlink/blob-store
-atom.symlink/compile-cache/
-atom.symlink/packages
-atom.symlink/storage
-atom.symlink/themes
-atom.symlink/blob-store
-atom.symlink/recovery
+atom.symlink/*
+!atom.symlink/atom.coffee
+!atom.symlink/config.cson
+!atom.symlink/init.coffee
 
 git/gitconfig.local.symlink
+
+vscode/workspaceStorage
