--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -47,5 +47,6 @@
     "terminal.foreground" : "#00f900",
     "terminal.background" : "#000000",
     "terminal.border": "#ff0000"
-  }
+  },
+  "terminal.integrated.scrollback": 10000
 }
